--- a/project/imooc-blog/manifest.json
+++ b/project/imooc-blog/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "imooc-blog",
-    "appid" : "",
+    "appid" : "__UNI__5841E05",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
@@ -52,7 +52,10 @@
         "appid" : "wx82596474177e1485",
         "setting" : {
             "urlCheck" : false,
-            "checkSiteMap" : false
+            "checkSiteMap" : false,
+            "minified" : true,
+            "postcss" : true,
+            "es6" : true
         },
         "usingComponents" : true
     },
