打包后不要 log

--- a/project/imooc-blog/manifest.json
+++ b/project/imooc-blog/manifest.json
@@ -53,7 +53,7 @@
         "setting" : {
             "urlCheck" : false,
             "checkSiteMap" : false,
-            "minified" : false,
+            "minified" : true,
             "postcss" : false,
             "es6" : false
         },
